@@ -2,3 +2,18 @@
 Project for Agile Development Methods(DA116A) course at Högskolan Kristianstad(HKR).
 
 ## What you think is junk could be somebody else's treasure, delivery to charities. 
+
+## Installation
+
+Add these to the project folder:
+- javafx-sdk-11.0.2
+- mysql-connector-java-8.0.23.jar
+
+Create a database called "mydb2", and restore it from the sql.sql file.
+
+## Running the app
+
+Open the project folder in IntelliJ, and create a configuration for each Main file.
+
+For sample/main add these VM options:
+--module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml
